# Cazz1-Launcher

./: README.md  il18n.js  package-lock.json  package.json  tsconfig.json
.erb/configs/: webpack.config.base.ts
locales/: en.json  it.json
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/prefs/: getLocalization.rs  get_localization.rs  mod.rs  userOS.rs  user_os.rs  writePrefs.rs  write_prefs.rs
src/backend/: getLocale.js  languageManager.d.ts  languageManager.js
src/components/: ChangeLog.tsx  Check.tsx  GuestDashboard.tsx  Loading.css  Loading.tsx  Login.tsx  Minecraft.tsx  login.css  login.js
src/main/: getOS.lua  main.ts
src/pages/: Homepage.css  Homepage.tsx  OfflinePage.css  OfflinePage.tsx  SignUpPage.tsx
src/renderer/: App.css  App.tsx  index.ejs
