[package]
name = "cazz1-launcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
include = ["/src", "src/main.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories-next = "2.0"
sys-locale = "0.3.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
thiserror = "1.0"
surrealdb = "1.0.0-beta.9"
fancy-regex = "0.11.0"
lettre = "0.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
